altre modifiche per migliorare la qualità del codice secondo le indicazioni di SonarQube