@@ -2,7 +2,6 @@
 package com.dietiestates.backend.util;
 
 import java.util.Date;
-import java.util.stream.Collectors;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -14,13 +13,13 @@ import com.auth0.jwt.JWTVerifier;
 
 import lombok.experimental.UtilityClass;
 
-// TODO: creare JWT exc
+
 @UtilityClass
 public class JwtUtil 
 {
     private final String ISSUER = "dieti-estates";
-    private final String SECRET_KEY = "w4nw7RJyMobORgdBx4cj80GjLUMBSscPaZ1HOiiQlwo="; // generated with: openssl rand -base64 32 // TODO: nascondere
-    private final long EXPIRATION_TIME = 24 * 60 * 60*1000;
+    private final String SECRET_KEY = "w4nw7RJyMobORgdBx4cj80GjLUMBSscPaZ1HOiiQlwo="; // generated with: openssl rand -base64 32
+    private final long EXPIRATION_TIME = 1L * 24 * 60 * 60 * 1000;
     private final Algorithm ALGORITHM = Algorithm.HMAC256(SECRET_KEY.getBytes());
     private final JWTVerifier jwtVerifier = JWT.require(ALGORITHM).build();
     
@@ -32,13 +31,12 @@ public class JwtUtil
                     .withIssuedAt(new Date(System.currentTimeMillis()))
                     .withSubject(userDetails.getUsername())
                     .withExpiresAt(new Date(System.currentTimeMillis() + EXPIRATION_TIME))
-                    .withClaim("roles", userDetails.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList()))
+                    .withClaim("roles", userDetails.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList())
                     .sign(ALGORITHM);
         
         
     }
 
-    
     public VerifiedJwt verifyToken(String token)
     {
         DecodedJWT decodedJWT = jwtVerifier.verify(token);
